# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2020-03-07 Michael Truog   <mjtruog at protonmail dot com>

    * Add configure argument --with-uuid-variant to switch the
      UUID v1 variant from rfc4122 (default) to ordered
    * Improvements for using the CloudI Service API nodes_set
      listen set to all and connect set to hidden
    * Add CloudI Service API nodes_set options {set, all | local}
      to control the nodes where the set operation occurs
    * Update cpg
    * Update uuid

2020-02-27 Michael Truog   <mjtruog at protonmail dot com>

    * Add Erlang/OTP 23 compatibility

2020-02-15 Michael Truog   <mjtruog at protonmail dot com>

    * Fix CloudI Service API services_update code_paths_remove use
      (with a list size greater than 1)
    * Change CloudI Service API services_update modules_load to
      load all the modules atomically
    * Update reltool_util

2020-02-12 Michael Truog   <mjtruog at protonmail dot com>

    * Update cpg

2020-02-10 Michael Truog   <mjtruog at protonmail dot com>

    * Fix Javascript CloudI API deprecation warning output
      (DEP0005 node.js Buffer() is deprecated)

2020-02-05 Michael Truog   <mjtruog at protonmail dot com>

    * Update cpg

2020-02-04 Michael Truog   <mjtruog at protonmail dot com>

    * Add Erlang/OTP kernel config {dist_auto_connect, never}
    * Update cpg

2020-01-10 Michael Truog   <mjtruog at protonmail dot com>

    * Fix Haskell CloudI API use of terminate_return_value as False

2020-01-08 Michael Truog   <mjtruog at protonmail dot com>

    * Improve termination handling in the
      C/C++/Go/Haskell/Java/Javascript/OCaml/Perl/PHP/Python/Ruby CloudI APIs
      (all terminate if the wrong return type is used
       with error output)
    * Improve external service termination by ensuring the SIGKILL
      happens during the last 500ms of the termination timeout

2020-01-06 Michael Truog   <mjtruog at protonmail dot com>
