@@ -1,6 +1,12 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2020-03-10 Michael Truog   <mjtruog at protonmail dot com>
+
+    * Improvements for using the CloudI Service API nodes_set
+      listen set to all
+    * Update cpg
+
 2020-03-07 Michael Truog   <mjtruog at protonmail dot com>
 
     * Add configure argument --with-uuid-variant to switch the
